--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 				<div class="col box">
 					<div class="info">
 						Mensagem revelada
-						<div class="buttons">
-							<div class="option clear" id="clearEncrypted" title="Limpar mensagem"><i class="fas fa-eraser fa-fw"></i></div>
-							<div class="option copy" id="copyEncrypted" title="Copiar mensagem"><i class="fas fa-copy fa-fw"></i></div>
-							<div class="option save" id="saveEncrypted" title="Baixar mensagem"><i class="fas fa-file-download fa-fw"></i></div>
+						<div class="buttons hidden">
+							<div class="option clear danger" id="clearDecrypted" title="Limpar mensagem"><i class="fas fa-eraser fa-fw"></i></div>
+							<div class="option copy" id="copyDecrypted" title="Copiar mensagem"><i class="fas fa-copy fa-fw"></i></div>
+							<div class="option save" id="saveDecrypted" title="Baixar mensagem"><i class="fas fa-file-download fa-fw"></i></div>
 						</div>
 					</div>
 					<textarea class="input" id="decrypted" placeholder="Digite sua mensagem aqui para criptografá-la" spellcheck="false" autofocus></textarea>
@@ -47,13 +47,19 @@
 				<div class="col box">
 					<div class="info">
 						Mensagem cifrada
-						<div class="buttons">
-							<div class="option clear" id="clearDecrypted" title="Limpar mensagem"><i class="fas fa-eraser fa-fw"></i></div>
-							<div class="option copy" id="copyDecrypted" title="Copiar mensagem"><i class="fas fa-copy fa-fw"></i></div>
-							<div class="option save" id="saveDecrypted" title="Baixar mensagem"><i class="fas fa-file-download fa-fw"></i></div>
+						<div class="buttons hidden">
+							<div class="option clear danger" id="clearEncrypted" title="Limpar mensagem"><i class="fas fa-eraser fa-fw"></i></div>
+							<div class="option copy" id="copyEncrypted" title="Copiar mensagem"><i class="fas fa-copy fa-fw"></i></div>
+							<div class="option save" id="saveEncrypted" title="Baixar mensagem"><i class="fas fa-file-download fa-fw"></i></div>
 						</div>
 					</div>
 					<textarea class="input" id="encrypted" placeholder="Digite sua mensagem criptografada aqui para revelá-la" spellcheck="false"></textarea>
+					
+					<!-- Tamanhos dos agrupamentos -->
+					<div class="param push-right hidden" title="Separa a mensagem cifrada por grupos de caracteres. Valores nulos não alteram a mensagem">
+						<i class="fas fa-shield-alt fa-fw"></i> Tamanho dos agrupamentos:
+						<input type="number" name="groupSize" id="groupSize" min="0" max="100" value="0">
+					</div>
 				</div>
 			</div>
 
