Correção na importação do CDN do Font Awesome

--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 		<title>Crypto Cypher</title>
 
 		<!-- Importa os ícones do Font Awesome via CDN -->
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.1/css/solid.css"
-			  integrity="sha384-VUnOJnDrNS0aVOhF6puq5SPJOP5oOvIO6n54m14E2/OHv6DU1gklJ4EImoD382c5"
-			  crossorigin="anonymous">
-		
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.1/css/fontawesome.css"
-			  integrity="sha384-jUGOH+gYMCfz2jbO6DW8vojES/a323h7dcoT6qI7Bvod9mew/wwTZryjccmaMOkf"
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.1/css/all.css"
+			  integrity="sha384-wxqG4glGB3nlqX0bi23nmgwCSjWIW13BdLUEYC4VIMehfbcro/ATkyDsF/AbIOVe"
 			  crossorigin="anonymous">
 
 		<!-- Arquivos CSS da aplicação -->
