Contador de bytes da mensagem cifrada implementado

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				<!-- Campo da mensagem cifrada -->
 				<div class="col box">
 					<div class="info">
+						<div class="note"><span id="numBytes"></span> bytes</div>
 						Mensagem cifrada
 						<div class="buttons hidden">
 							<div class="option clear danger" id="clearEncrypted" title="Limpar mensagem"><i class="fas fa-eraser fa-fw"></i></div>
