Origem dos arquivos do Font Awesome alterado para local

--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
 		
 		<title>Crypto Cypher</title>
 
-		<!-- Importa os ícones do Font Awesome via CDN -->
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.1/css/all.css"
-			  integrity="sha384-wxqG4glGB3nlqX0bi23nmgwCSjWIW13BdLUEYC4VIMehfbcro/ATkyDsF/AbIOVe"
-			  crossorigin="anonymous">
-
 		<!-- Arquivos CSS da aplicação -->
+		<link rel="stylesheet" href="css/font-awesome.css">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
