Correção importante no layout

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				
 				<!-- Painel de informações -->
 				<div class="page hidden no-select" id="helpPanel">
-					<div class="row" style="padding-bottom: 4px;">
+					<div class="row fill" style="padding-bottom: 4px;">
 						<div class="col box">
 							<div class="info"><i class="icon fas fa-info"></i> Informações</div>
 							
