O script da jQuery passou a ser local

--- a/index.html
+++ b/index.html
@@ -200,10 +200,8 @@
 			</div>
 		</div>
 
-		<!-- Importa a jQuery 3.4.1 via CDN -->
-		<script src="https://code.jquery.com/jquery-3.4.1.js"
-				integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-				crossorigin="anonymous"></script>
+		<!-- jQuery 3.4.1 -->
+		<script src="js/jquery-3.4.1.js"></script>
 		
 		<!-- Script do funcionamento da criptografia -->
 		<script src="js/cypher.js"></script>
